--- a/css/theme.less
+++ b/css/theme.less
@@ -195,12 +195,13 @@ table.spip h3 + p{
   width:100%;
   background:@white;
   #logo_site_spip{
-    margin:10px 0 0 0;
+    margin:17px 0 0 10px;
     .spip_logos{
       margin:0;
     }
     img{
       max-width:197px;
+      width:112%;
     }
   }
 }
@@ -891,6 +892,13 @@ table.spip h3 + p{
                input[type="radio"]{
                  margin:0;
                  vertical-align:baseline;
+                 border:none;
+                 -webkit-box-shadow:none;
+                 -moz-box-shadow:none;
+                 box-shadow:none;
+                 -webkit-transition:none;
+                 -moz-transition:none;
+                 transition:none;
                }
                div.choix{
                  float:left;
@@ -1269,6 +1277,14 @@ table.spip h3 + p{
       border-left:none;
     }
   }
+  .close_button{
+    position:absolute;
+    right:0;
+    a{
+      display:block;
+      padding:.5em;
+    }
+  }
   .borderbottom{
     border-bottom:1px solid @green;
   }
@@ -1283,6 +1299,7 @@ table.spip h3 + p{
     width:106%;
     .box-sizing(border-box);
     h3{
+      margin:0 70px inherit 70px;
       font-size:2.8em;
       color:@white;
       text-align:center;
@@ -1364,6 +1381,11 @@ table.spip h3 + p{
     font-size:2em;
     text-transform:uppercase;
     line-height:1.3em;
+  }
+  .reponse_formulaire_ok{
+    a{
+      color:#00b306;
+    }
   }
   .choix{
     label{
@@ -1489,7 +1511,6 @@ table.spip h3 + p{
    padding:2em 0;
    .ticket_title{
      height:300px;
-     max-width:15%;
      float:left;
      background:@white;
      padding:0 1.5em;
@@ -1502,7 +1523,7 @@ table.spip h3 + p{
      float:left;
      height:280px;
      padding:10px;
-     width:85%;
+     width:84%;
      -moz-border-image-slice: 7;
       -webkit-border-image-slice: 7;
       border-image-slice: 7;
@@ -1825,8 +1846,8 @@ table.spip h3 + p{
 
 @media only screen and (max-width: 767px) {
   .page_sommaire{
-    #nav,.wrapper,.footer,#timeline {display: none;}
-    #alert{display:block;}
+    #nav,.wrapper,.footer,#timeline,.header {display: none;}
+    #alert{display:block;margin:0;}
   }
   .row-fluid .itembox,.rubrique_blog .background_archive{
     display:none;
