--- a/css/theme.less
+++ b/css/theme.less
@@ -227,6 +227,11 @@ table.spip h3 + p{
           a{
             border:none;
           }
+          .texte_libre{
+            font-weight:inherit;
+            font-size:inherit;
+            padding:0;
+          }
         }
       }
     }
@@ -848,7 +853,7 @@ table.spip h3 + p{
              .error{
                background:none;
                border:none;
-               .text-shadow(0);
+               //.text-shadow(0);
              }
              .date,.venue,.boutons{
                float:left;
